deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: humboldt-resource-api-svc
  name: humboldt-resource-api-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: humboldt-resource-api
  type: ClusterIP
