deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humboldt-resource-api
  labels:
    k8s-app: humboldt-resource-api
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: humboldt-resource-api
  template:
    metadata:
      labels:
        k8s-app: humboldt-resource-api
    spec:
      containers:
      - name: api-pod
        image: gitlab-registry.nrp-nautilus.io/humboldt/kubernetes-resource-api:v1.4
        resources:
          requests:
            cpu: 1
            memory: "1Gi"
          limits:
            cpu: 1
            memory: "1Gi"
        volumeMounts:
        - mountPath: /config-volume
          name: config-volume
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: humboldt-resource-api-svc
  name: humboldt-resource-api-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: humboldt-resource-api
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: humboldt-resource-api-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: humboldt-resource-api.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: humboldt-resource-api-svc
            port:
              number: 8080
  tls:
  - hosts:
    - humboldt-resource-api.nrp-nautilus.io
